# gmail-organizer

./: .gitignore  BRAND_GUIDELINES.md  CHANGELOG.md  DEPLOYMENT_GUIDE.md  GO_TO_MARKET.md  LICENSE  README.md  SECURITY.md  code_review_report.md  code_reviews.json  credentials_setup.md  email_directory_structure.md  final_code_review.md  gmail_filters_expanded.xml  gmail_label_creator.gs  gmail_organizer.py  gmail_organizer_original.py  package.json  pyproject.toml  slack_channel_mapping.md  test_copilot_instructions.py  test_github_repository_label_migration.py  test_gmail_organizer.py  test_revvel_standards.py  venice_reviews.json
.github/: copilot-instructions.md
.hypothesis/constants/: 392f5618269e5496  3d9dd2db71735e6b  3f5d437f130c98af  43706f5b0a999679  67b0a8ccf18bf5d2  79cd65eedc9dddb8  97f7e85a131742e0  9fd5baac60f455a9  d7adb10ddd21cdae
gmail_organizer/: __init__.py  __main__.py  auth.py  categorizer.py  config.py  migrator.py  operations.py  reporter.py  utils.py
scripts/: build-baseline.sh  test-baseline.sh
tests/: __init__.py  test_auth.py  test_categorizer.py  test_config.py  test_migrator.py  test_migrator_extended.py  test_operations.py  test_operations_extended.py  test_reporter.py  test_utils.py
website/: index.html
